--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,10 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#función para convertir fecha de isoformat a datetime\n",
     "def getDateTimeFromISO8601String(iso): \n",
     "    f = dateutil.parser.parse(iso) \n",
     "    return f"
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -76,102 +77,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Construyendo el sitio para  cnn\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\newspaper\\mthreading.py\", line 46, in run\n",
-      "    func(*args, **kargs)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\newspaper\\network.py\", line 108, in send\n",
-      "    self.timeout, self.useragent, self.proxies, self.headers))\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\requests\\api.py\", line 75, in get\n",
-      "    return request('get', url, params=params, **kwargs)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\requests\\api.py\", line 60, in request\n",
-      "    return session.request(method=method, url=url, **kwargs)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\requests\\sessions.py\", line 533, in request\n",
-      "    resp = self.send(prep, **send_kwargs)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\requests\\sessions.py\", line 686, in send\n",
-      "    r.content\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\requests\\models.py\", line 828, in content\n",
-      "    self._content = b''.join(self.iter_content(CONTENT_CHUNK_SIZE)) or b''\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\requests\\models.py\", line 750, in generate\n",
-      "    for chunk in self.raw.stream(chunk_size, decode_content=True):\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\urllib3\\response.py\", line 494, in stream\n",
-      "    data = self.read(amt=amt, decode_content=decode_content)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\site-packages\\urllib3\\response.py\", line 442, in read\n",
-      "    data = self._fp.read(amt)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\http\\client.py\", line 449, in read\n",
-      "    n = self.readinto(b)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\http\\client.py\", line 493, in readinto\n",
-      "    n = self.fp.readinto(b)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\socket.py\", line 586, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\ssl.py\", line 1009, in recv_into\n",
-      "    return self.read(nbytes, buffer)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\ssl.py\", line 871, in read\n",
-      "    return self._sslobj.read(len, buffer)\n",
-      "  File \"c:\\users\\user\\appdata\\local\\programs\\python\\python36-32\\lib\\ssl.py\", line 631, in read\n",
-      "    v = self._sslobj.read(len, buffer)\n",
-      "ssl.SSLWantReadError: The operation did not complete (read) (_ssl.c:2273)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sitio construido para  cnn\n",
-      "Van  1  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/style/article/helicoide-venezuela-olalquiaga-intl/index.html\n",
+      "\n",
+      "Construyendo el sitio para  cnn\n",
+      "Sitio construido para  cnn \n",
+      "\n",
+      "El artícuo tiene tipo None...\n",
+      "Van  1  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/16/americas/us-delivers-emergency-kit-venezuela/index.html\n",
+      "Van  2  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/11/americas/venezuela-migrant-women-prostitution-intl/index.html\n",
+      "Van  3  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/11/americas/venezuela-migrant-women-prostitution-intl/index.html\n",
+      "Van  4  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/12/americas/venezuela-politics-protests-intl/index.html\n",
+      "Van  5  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/15/politics/us-maduro-humanitarian-aid/index.html\n",
+      "Van  6  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/15/politics/us-maduro-humanitarian-aid/index.html\n",
       "El artícuo tiene tipo None...\n",
       "El artícuo tiene tipo None...\n",
-      "Article `download()` failed with 403 Client Error: Forbidden for url: http://www.preview.cnn.com/2015/04/02/world/iyw-guatemala-gender-violence/index.html on URL http://www.preview.cnn.com/2015/04/02/world/iyw-guatemala-gender-violence/index.html\n",
-      "continuing...\n",
+      "El artícuo tiene tipo None...\n",
+      "El artícuo tiene tipo None...\n",
+      "Article `download()` failed with 404 Client Error: Not Found for url: https://fox13now.com/2019/02/15/herriman-residents-recall-close-call-with-mountain-lion-that-may-have-caused-lockout-at-schools/ on URL https://fox13now.com/2019/02/15/herriman-residents-recall-close-call-with-mountain-lion-that-may-have-caused-lockout-at-schools/\n",
+      "continuando...\n",
+      "\n",
       "El artícuo tiene tipo None...\n",
       "El artícuo tiene tipo None...\n",
       "El artícuo tiene tipo None...\n",
       "El artícuo tiene tipo None...\n",
       "El artícuo tiene tipo None...\n",
       "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "Demasiado tipo None, abortando...\n",
-      "Construyendo el sitio para  bbc\n",
-      "Sitio construido para  bbc\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "Demasiado tipo None, abortando...\n",
-      "Construyendo el sitio para  universo\n",
-      "Sitio construido para  universo\n",
-      "Van  2  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/16/nota/7191752/juan-guaido-organiza-voluntarios-recibir-ayuda-humanitaria-maduro\n",
-      "Van  3  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190921/oea-propone-reformas-urgentes-profundas-propiciar-elecciones\n",
-      "Van  4  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190501/gobierno-nicolas-maduro-decomiso-donaciones-personas-vih\n",
-      "Van  5  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190258/aviones-militares-estados-unidos-llevaran-venezuela-mas-ayuda\n",
-      "Van  6  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190204/grupo-contacto-sobre-venezuela-enviara-mision-tecnica-proxima\n",
-      "Van  7  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190195/presidente-colombia-pide-oea-mas-presion-sobre-nicolas-maduro\n",
-      "Van  8  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189502/nicolas-maduro-revela-reuniones-enviado-donald-trump-venezuela\n",
-      "Van  9  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189502/nicolas-maduro-revela-reuniones-enviado-donald-trump-venezuela\n",
-      "Van  10  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189388/multimillonario-richard-branson-organiza-concierto-recaudar-dinero\n",
-      "Van  11  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7188599/diputado-opositor-dice-que-se-incluira-militares-chavismo-maduro\n",
-      "Van  12  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/2019/02/14/video/7189172/gobierno-venezuela-anuncia-apoyo-50-paises-onu\n",
-      "Van  13  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/2019/02/13/video/7187243/papa-francisco-exige-nicolas-maduro-dialogo-tenga-como-objetivo-bien-comun\n",
-      "Van  14  artículos bajados de  universo  usando el sitio de url:  http://www.eluniverso.com/noticias/2019/02/15/nota/7190501/gobierno-nicolas-maduro-decomiso-donaciones-personas-vih\n",
-      "Article `download()` failed with 404 Client Error: Not Found for url: https://www.eluniverso.com/temas/v on URL https://www.eluniverso.com/temas/v\n",
-      "continuing...\n",
-      "Van  15  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/2018/08/21/fotogaleria/6916679/crisis-migratoria-venezuela\n",
-      "El artícuo tiene tipo None...\n"
+      "Article `download()` failed with 403 Client Error: Forbidden for url: https://www.comparecards.com/guide/heres-a-brilliant-way-to-pay-credit-cards?esourceid=6315166&utm_source=cnn&utm_medium=native&pla=cnn.com&bdst=rv&acqs=prospecting&utm_campaign=sectionfront&grp=brilliant-way&tar=sectionfront&utm_content=fastest&adt=orangered on URL https://www.comparecards.com/guide/heres-a-brilliant-way-to-pay-credit-cards?esourceid=6315166&utm_source=cnn&utm_medium=native&pla=cnn.com&bdst=rv&acqs=prospecting&utm_campaign=sectionfront&grp=brilliant-way&tar=sectionfront&utm_content=fastest&adt=orangered\n",
+      "continuando...\n",
+      "\n"
      ]
     }
    ],
@@ -180,13 +112,13 @@
     "\n",
     "# Iteración por cada diario electrónico\n",
     "for company, value in companies.items():\n",
-    "    print(\"Construyendo el sitio para \", company)\n",
+    "    print(\"\\nConstruyendo el sitio para \", company)\n",
     "    paper = newspaper.build(value['link'], memoize_articles=False)\n",
     "    newsPaper = {\n",
     "        \"link\": value['link'],\n",
     "        \"articles\": []\n",
     "    }\n",
-    "    print(\"Sitio construido para \", company)\n",
+    "    print(\"Sitio construido para \", company,\"\\n\")\n",
     "    noneTypeCount = 0\n",
     "    for content in paper.articles:\n",
     "        if count > LIMIT:\n",
@@ -196,15 +128,15 @@
     "            content.parse()\n",
     "        except Exception as e:\n",
     "            print(e)\n",
-    "            print(\"continuing...\")\n",
+    "            print(\"continuando...\\n\")\n",
     "            continue\n",
     "        # Se saltará el artículo que no posea fecha de publicación.\n",
-    "        # Después de tener 10 artículos sin fecha, el diario electrónico será saltado.\n",
+    "        # Después de tener 20 artículos sin fecha, el diario electrónico será saltado, seguramente su estructura no facilita la obtención de los features seleccionados.\n",
     "        if content.publish_date is None or content.title is None or content.text is None or content.url is None:\n",
     "            print(\"El artícuo tiene tipo None...\")\n",
     "            noneTypeCount = noneTypeCount + 1\n",
-    "            if noneTypeCount > 10:\n",
-    "                print(\"Demasiado tipo None, abortando...\")\n",
+    "            if noneTypeCount > 20:\n",
+    "                print(\"Demasiado tipo None, abortando...\\n\")\n",
     "                noneTypeCount = 0\n",
     "                break\n",
     "            continue\n",
@@ -216,7 +148,7 @@
     "            #fecha = getDateTimeFromISO8601String(content.publish_date.isoformat())\n",
     "            #fecha_desde = datetime(2018, 1, 1, 0, 0, 0)\n",
     "            #fecha_hasta = datetime(2018,12,31,23,59,59)\n",
-    "            palabras = [\"Maduro\",\"Venezuela\"]\n",
+    "            palabras = [\"Maduro\",\"Venezuela\",\"venezolanos\",\"Venezuelan\",\"venezolanas\",\"venezolano\"]\n",
     "            for palabra in palabras:\n",
     "                if palabra in content.title:\n",
     "                    #if fecha <= fecha_hasta and fecha >= fecha_desde:\n",
@@ -231,7 +163,7 @@
     "                    noneTypeCount = 0\n",
     "                    data['newspapers'][company] = newsPaper\n",
     "                    try:\n",
-    "                        with open('scraped_articles.json', 'w') as outfile:\n",
+    "                        with open('articulos_scrapeados3.json', 'w') as outfile:\n",
     "                            json.dump(data, outfile)\n",
     "                    except Exception as e: print(e)"
    ]
