cambios en el sraper

--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -78,80 +78,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Construyendo el sitio para  cnn\n",
-      "Sitio construido para  cnn \n",
+      "Construyendo el sitio para  universopg1\n",
+      "Sitio construido para  universopg1 \n",
       "\n",
-      "El artícuo tiene tipo None...\n",
-      "Van  1  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/16/americas/us-delivers-emergency-kit-venezuela/index.html\n",
-      "Van  2  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/11/americas/venezuela-migrant-women-prostitution-intl/index.html\n",
-      "Van  3  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/11/americas/venezuela-migrant-women-prostitution-intl/index.html\n",
-      "Van  4  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/12/americas/venezuela-politics-protests-intl/index.html\n",
-      "Van  5  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/15/politics/us-maduro-humanitarian-aid/index.html\n",
-      "Van  6  artículos bajados de  cnn  usando el sitio de url:  https://edition.cnn.com/2019/02/15/politics/us-maduro-humanitarian-aid/index.html\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "Article `download()` failed with 404 Client Error: Not Found for url: https://fox13now.com/2019/02/15/herriman-residents-recall-close-call-with-mountain-lion-that-may-have-caused-lockout-at-schools/ on URL https://fox13now.com/2019/02/15/herriman-residents-recall-close-call-with-mountain-lion-that-may-have-caused-lockout-at-schools/\n",
-      "continuando...\n",
-      "\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "Article `download()` failed with 403 Client Error: Forbidden for url: https://www.comparecards.com/guide/heres-a-brilliant-way-to-pay-credit-cards?esourceid=6315166&utm_source=cnn&utm_medium=native&pla=cnn.com&bdst=rv&acqs=prospecting&utm_campaign=sectionfront&grp=brilliant-way&tar=sectionfront&utm_content=fastest&adt=orangered on URL https://www.comparecards.com/guide/heres-a-brilliant-way-to-pay-credit-cards?esourceid=6315166&utm_source=cnn&utm_medium=native&pla=cnn.com&bdst=rv&acqs=prospecting&utm_campaign=sectionfront&grp=brilliant-way&tar=sectionfront&utm_content=fastest&adt=orangered\n",
-      "continuando...\n",
-      "\n",
-      "El artícuo tiene tipo None...\n",
-      "Demasiado tipo None, abortando...\n",
-      "\n",
-      "\n",
-      "Construyendo el sitio para  bbc\n",
-      "Sitio construido para  bbc \n",
-      "\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "El artícuo tiene tipo None...\n",
-      "Demasiado tipo None, abortando...\n",
-      "\n",
-      "\n",
-      "Construyendo el sitio para  universo\n",
-      "Sitio construido para  universo \n",
-      "\n",
-      "Van  7  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/16/nota/7191752/juan-guaido-organiza-voluntarios-recibir-ayuda-humanitaria-maduro\n",
-      "Van  8  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190921/oea-propone-reformas-urgentes-profundas-propiciar-elecciones\n",
-      "Van  9  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190501/gobierno-nicolas-maduro-decomiso-donaciones-personas-vih\n",
-      "Van  10  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190258/aviones-militares-estados-unidos-llevaran-venezuela-mas-ayuda\n",
-      "Van  11  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190204/grupo-contacto-sobre-venezuela-enviara-mision-tecnica-proxima\n",
-      "Van  12  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190195/presidente-colombia-pide-oea-mas-presion-sobre-nicolas-maduro\n",
-      "Van  13  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7189514/huir-o-comida-migran-mas-venezolanos\n",
-      "Van  14  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7189514/huir-o-comida-migran-mas-venezolanos\n",
-      "Van  15  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189502/nicolas-maduro-revela-reuniones-enviado-donald-trump-venezuela\n",
-      "Van  16  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189502/nicolas-maduro-revela-reuniones-enviado-donald-trump-venezuela\n",
-      "Van  17  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189388/multimillonario-richard-branson-organiza-concierto-recaudar-dinero\n",
-      "Van  18  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7188599/diputado-opositor-dice-que-se-incluira-militares-chavismo-maduro\n",
-      "Van  19  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/2019/02/14/video/7189172/gobierno-venezuela-anuncia-apoyo-50-paises-onu\n",
-      "Article `download()` failed with 403 Client Error: Forbidden for url: https://www.eluniverso.com/opinion/2019/02/17/nota/7190759/galatea on URL https://www.eluniverso.com/opinion/2019/02/17/nota/7190759/galatea\n",
-      "continuando...\n",
-      "\n",
-      "Article `download()` failed with HTTPSConnectionPool(host='www.eluniverso.com', port=443): Max retries exceeded with url: /larevista/2018/12/23/nota/7106826/canto-lleno-emocion (Caused by ConnectTimeoutError(<urllib3.connection.VerifiedHTTPSConnection object at 0x06CE93B0>, 'Connection to www.eluniverso.com timed out. (connect timeout=7)')) on URL https://www.eluniverso.com/larevista/2018/12/23/nota/7106826/canto-lleno-emocion\n",
-      "continuando...\n",
-      "\n",
-      "Article `download()` failed with 404 Client Error: Not Found for url: https://www.eluniverso.com/temas/v on URL https://www.eluniverso.com/temas/v\n",
-      "continuando...\n",
-      "\n",
-      "Van  20  artículos bajados de  universo  usando el sitio de url:  https://www.eluniverso.com/2018/08/21/fotogaleria/6916679/crisis-migratoria-venezuela\n",
-      "El artícuo tiene tipo None...\n"
+      "Van  1  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/16/nota/7191752/juan-guaido-organiza-voluntarios-recibir-ayuda-humanitaria-maduro\n",
+      "Van  2  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190921/oea-propone-reformas-urgentes-profundas-propiciar-elecciones\n",
+      "Van  3  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190501/gobierno-nicolas-maduro-decomiso-donaciones-personas-vih\n",
+      "Van  4  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190258/aviones-militares-estados-unidos-llevaran-venezuela-mas-ayuda\n",
+      "Van  5  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190204/grupo-contacto-sobre-venezuela-enviara-mision-tecnica-proxima\n",
+      "Van  6  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7190195/presidente-colombia-pide-oea-mas-presion-sobre-nicolas-maduro\n",
+      "Van  7  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7189514/huir-o-comida-migran-mas-venezolanos\n",
+      "Van  8  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/15/nota/7189514/huir-o-comida-migran-mas-venezolanos\n",
+      "Van  9  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189502/nicolas-maduro-revela-reuniones-enviado-donald-trump-venezuela\n",
+      "Van  10  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189502/nicolas-maduro-revela-reuniones-enviado-donald-trump-venezuela\n",
+      "Van  11  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7189388/multimillonario-richard-branson-organiza-concierto-recaudar-dinero\n",
+      "Van  12  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/noticias/2019/02/14/nota/7188599/diputado-opositor-dice-que-se-incluira-militares-chavismo-maduro\n",
+      "Van  13  artículos bajados de  universopg1  usando el sitio de url:  https://www.eluniverso.com/2019/02/14/video/7189172/gobierno-venezuela-anuncia-apoyo-50-paises-onu\n"
      ]
     }
    ],
