--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -4119,48 +4119,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import os\n",
+    "import csv\n",
     "\n",
-    "data = {}\n",
-    "data['nombre'] = 'Jose'\n",
-    "data['edad'] = '15'\n",
-    "data['nacionalidad'] = 'Mex'\n",
+    "entrada = open(\"articulos_scrapeados1.json\",\"r\")\n",
+    "salida = open(\"noticiasVenezuela.csv\",\"w\")\n",
     "\n",
-    "dir = 'C:/Users/User/Thalía/Espol/2018-2S/Minería/noticiasVenezuela'\n",
-    "file_name = \"data.json\"\n",
+    "escritor = csv.writer(salida)\n",
     "\n",
-    "with open(os.path.join(dir, file_name), 'w') as file:\n",
-    "    json.dump(data, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "for linea in json.loads(entrada.read()):\n",
+    "    escritor.writerow(linea)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
