resultantes del Scraper

--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -4098,10 +4098,10 @@
     "                if palabra in content.title:\n",
     "                    #if fecha <= fecha_hasta and fecha >= fecha_desde:\n",
     "                    article = {}\n",
+    "                    article['fecha'] = content.publish_date.isoformat()\n",
+    "                    article['url'] = content.url\n",
     "                    article['titulo'] = content.title\n",
     "                    article['texto'] = content.text\n",
-    "                    article['link'] = content.url\n",
-    "                    article['fecha'] = content.publish_date.isoformat()\n",
     "                    newsPaper['articles'].append(article)\n",
     "                    print(\"Van \",count, \" artículos bajados de \", company, \" usando el sitio de url: \", content.url)\n",
     "                    count = count + 1\n",
